--- a/core-node/quartapp/templates/inference.html
+++ b/core-node/quartapp/templates/inference.html
@@ -4,13 +4,12 @@
 
 <!-- Page Heading -->
 <h2 class="text-center">Upload CSV File</h2>
-<form id="csvUploadForm" action="/upload_csv" method="post" enctype="multipart/form-data" class="mt-4">
-    <div class="form-group">
-        <label for="csvFile">Select CSV file:</label>
-        <input type="file" class="form-control-file" id="csvFile" name="csv_file" accept=".csv" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Upload</button>             
+<form id="uploadForm" enctype="multipart/form-data">
+    <label for="fileInput">Upload a CSV File:</label>
+    <input type="file" id="fileInput" name="file" accept=".csv">
+    <button type="button" id="uploadButton" class="btn btn-primary">Upload</button>
 </form>
+
 
 
 {% endblock %}
