--- a/core-node/quartapp/templates/app_base.html
+++ b/core-node/quartapp/templates/app_base.html
@@ -455,11 +455,20 @@
 
             e.preventDefault();
             const selectedRowData = $('#dataTable tr.selected').data(); // Retrieve data from the selected row
-
+            
             if (!selectedRowData) {
                 alert('Please select a row before submitting!');
                 return false;
             }
+
+            // Retrieve data values from the row
+            const rowData = {
+                id: selectedRow.find('td:nth-child(1)').text().trim(),       // First column (ID)
+                hostname: selectedRow.find('td:nth-child(2)').text().trim(), // Second column (Hostname)
+                ip: selectedRow.find('td:nth-child(3)').text().trim()        // Third column (IP)
+            };
+
+            alert(rowData)
 
             // Sending selected row data to the server
             $.getJSON('/background_process_test', function (response) {
