--- a/core-node/quartapp/templates/probemgr.html
+++ b/core-node/quartapp/templates/probemgr.html
@@ -7,7 +7,7 @@
 </button>
 
 <!-- Page Heading -->
-<h3>Data Table</h3>
+<h3>Adopted Probes</h3>
 <div class="table-responsive">
 
     <table class="table table-striped" id="dataTable">
