--- a/core-node/quartapp/templates/inference.html
+++ b/core-node/quartapp/templates/inference.html
@@ -3,12 +3,36 @@
 {% block content %}
 
 <!-- Page Heading -->
-<h2 class="text-center">Upload CSV File</h2>
+<h2 class="text-center">Upload PCAPs</h2>
+<p>Accepts CSV format only. PCAPS can be submitted in JSON from the probe (or any other means of making an API call) via /netmetadata.</p>
 <form id="uploadForm" enctype="multipart/form-data">
     <label for="fileInput">Upload a CSV File:</label>
     <input type="file" id="fileInput" name="file" accept=".csv">
     <button type="button" id="uploadButton" class="btn btn-primary">Upload</button>
 </form>
+
+<button id="csv_load" class="btn btn-primary">
+    <i class="fas fa-search fa-sm"></i> Refresh PCAP List
+</button>
+
+<!-- Page Heading -->
+<h3>PCAP Files</h3>
+<div class="table-responsive">
+
+    <table class="table table-striped" id="csvDataTable">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>File Path</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Data will be inserted here by JavaScript -->
+        </tbody>                  
+    </table>
+
+</div>
 
 
 
