--- a/core-node/quartapp/templates/app_base.html
+++ b/core-node/quartapp/templates/app_base.html
@@ -314,6 +314,7 @@
                             <td>${probe.id}</td>
                             <td>${probe.hst_nm}</td>
                             <td>${probe.ip}</td>
+                            <td>${probe.ports}</td>
                             <td>
                                 <button class="btn btn-primary">
                                     Connection Check
@@ -352,7 +353,8 @@
             const rowData = {
                 id: selectedRow.find('td:nth-child(1)').text().trim(),       // First column (ID)
                 hostname: selectedRow.find('td:nth-child(2)').text().trim(), // Second column (Hostname)
-                ip: selectedRow.find('td:nth-child(3)').text().trim()       // Third column (IP)
+                ip: selectedRow.find('td:nth-child(3)').text().trim(),       // Third column (IP)
+                ports: selectedRow.find('td:nth-child(4)').text().trim()       // Fourth column (Ports)
             };
 
             // Display the retrieved row data
