--- a/core-node/quartapp/templates/probemgr.html
+++ b/core-node/quartapp/templates/probemgr.html
@@ -16,6 +16,7 @@
                 <th>ID</th>
                 <th>Hostname</th>
                 <th>IP</th>
+                <th>Ports</th>
                 <th>Action</th>
             </tr>
         </thead>
