--- a/core-node/quartapp/templates/404.html
+++ b/core-node/quartapp/templates/404.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'index_base.html' %}
 
 {% block content %}
 
-<title>{% block title %} netsumap Dashboard {% endblock %}</title>
+<title>{% block title %} netsumap 404 {% endblock %}</title>
 <!-- 404 Error Text -->
 <div class="text-center">
     <div class="error mx-auto" data-text="404">404</div>
