--- a/core-node/quartapp/templates/probemgr.html
+++ b/core-node/quartapp/templates/probemgr.html
@@ -17,6 +17,7 @@
                 <th>Hostname</th>
                 <th>IP</th>
                 <th>Ports</th>
+                <th>Interface(s)</th>
                 <th>Action</th>
             </tr>
         </thead>
