--- a/core-node/quartapp/templates/app_base.html
+++ b/core-node/quartapp/templates/app_base.html
@@ -332,8 +332,8 @@
                                             </button>
                                         </li>
                                         <li>
-                                            <button class="btn btn-primary dropdown-item" data-action="update_probe">
-                                                Update Probe
+                                            <button class="btn btn-primary dropdown-item" data-action="speed_test">
+                                                Speed/Bandwidth Test
                                             </button>
                                         </li>
                                         <li><hr class="dropdown-divider"></li>
@@ -395,7 +395,7 @@
             const endpoints = {
                 check_uptime: '/check_uptime',
                 run_pcap: '/run_pcap',
-                update_probe: '/update_probe',
+                speed_test: '/speed_test',
                 custom_action: '/custom_action'
             };
 
