--- a/core-node/quartapp/templates/app_base.html
+++ b/core-node/quartapp/templates/app_base.html
@@ -331,6 +331,11 @@
                                                 Capture Traffic
                                             </button>
                                         </li>
+                                        <li>
+                                            <button class="btn btn-primary dropdown-item" data-action="speed_test">
+                                                Bandwidth/Speed Test
+                                            </button>
+                                        </li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li>
                                             <button class="btn btn-primary dropdown-item" data-action="custom_action">
@@ -390,6 +395,7 @@
             const endpoints = {
                 check_uptime: '/check_uptime',
                 run_pcap: '/run_pcap',
+                speed_test: '/speed_test',
                 custom_action: '/custom_action'
             };
 
